add all pages to cron job, set cron schedule

--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -1,18 +1,48 @@
 name: "Cache projectcreatedc.org"
 on:
   schedule:
-  - cron: "*/2 * * * *"
+  - cron: "10 0 * * *"
   workflow_dispatch:
 
 jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
-      - name: Cache Homepage
-        run: curl "https://projectcreatedc.org"
+      - name: Cache 'Home' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org"
+      - name: Cache 'Mission, Vision & Values' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/about-us/vision-and-mission/"
+      - name: Cache 'Our History' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/about-us/our-history/"
+      - name: Cache 'Staff' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/about-us/our-people/our-staff/"
+      - name: Cache 'Teaching Artists' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/about-us/our-people/teachers-therapists/"
+      - name: Cache 'Board of Directors' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/about-us/our-people/board-of-directors/"
+      - name: Cache 'Supporters' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/about-us/supporters/"
+      - name: Cache 'Studio Classes' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/our-programs/studio-programs/"
+      - name: Cache 'Join Us' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/join-us/"
+      - name: Cache 'Family Art Day' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/our-programs/family-art-day/"
+      - name: Cache 'Workshops' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/our-programs/workshops/"
       - name: Cache News Page
-        run: curl "https://projectcreatedc.org/news-events/news/"
-      - name: Cache Staff Page
-        run: curl "https://projectcreatedc.org/about-us/our-people/our-staff/"
-      - name: Cache Teachers Page
-        run: curl "https://projectcreatedc.org/about-us/our-people/teachers-therapists/"
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/news-events/news/"
+      - name: Cache 'Shop' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/shop/"
+      - name: Cache 'Contact Us' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/contact-us/"
+      - name: Cache 'Donate' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/donate/"
+      - name: Cache 'Partnership Programs' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/our-programs/partnership-programs/"
+      - name: Cache 'Art Therapy' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/our-programs/art-therapy/"
+      - name: Cache 'Professional Development' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/our-programs/professional-development/"
+      - name: Cache 'Privacy Policy' Page
+        run: curl --connect-timeout 30 "https://projectcreatedc.org/privacy-policy/"
