--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -1,7 +1,7 @@
 name: "Cache projectcreatedc.org"
 on:
   schedule:
-  - cron: "10 5 * * *"
+  - cron: "45 */1 * * *"
   workflow_dispatch:
 
 jobs:
